testdata/baselines/reference/compiler/templateLiteralMultiByteCharInference.errors.txt
templateLiteralMultiByteCharInference.tlua(6,74): error TS2304: Cannot find name 'Head'.
templateLiteralMultiByteCharInference.tlua(6,74): error TS2538: Type 'Head' cannot be used as an index type.
templateLiteralMultiByteCharInference.tlua(6,78): error TS1005: ']' expected.
templateLiteralMultiByteCharInference.tlua(6,80): error TS1434: Unexpected keyword or identifier.
templateLiteralMultiByteCharInference.tlua(6,80): error TS2304: Cannot find name 'Rest'.
templateLiteralMultiByteCharInference.tlua(6,84): error TS1128: Declaration or statement expected.
templateLiteralMultiByteCharInference.tlua(6,86): error TS1128: Declaration or statement expected.
templateLiteralMultiByteCharInference.tlua(6,88): error TS2693: 'never' only refers to a type, but is being used as a value here.


==== templateLiteralMultiByteCharInference.tlua (8 errors) ====
    // Verifies that template literal type inference handles multi-byte characters correctly,
    // slicing by Unicode code point (rune) instead of by byte.
    
    type GetFirst<S extends string> = S extends `${infer Head}${string}` ? Head : never;
    type GetRest<S extends string> = S extends `${string}${infer Rest}` ? Rest : never;
    type Split<S extends string> = S extends `${infer Head}${infer Rest}` ? [Head, Rest] : never;
                                                                             ~~~~
!!! error TS2304: Cannot find name 'Head'.
                                                                             ~~~~
!!! error TS2538: Type 'Head' cannot be used as an index type.
                                                                                 ~
!!! error TS1005: ']' expected.
                                                                                   ~~~~
!!! error TS1434: Unexpected keyword or identifier.
                                                                                   ~~~~
!!! error TS2304: Cannot find name 'Rest'.
                                                                                       ~
!!! error TS1128: Declaration or statement expected.
                                                                                         ~
!!! error TS1128: Declaration or statement expected.
                                                                                           ~~~~~
!!! error TS2693: 'never' only refers to a type, but is being used as a value here.
    
    // Single-byte (ASCII) characters
    type A = GetFirst<"ABC">;  // "A"
    type BC = GetRest<"ABC">;  // "BC"
    type ABC_Split = Split<"ABC">;  // ["A", "BC"]
    
    // Multi-byte characters (Japanese, 3 bytes in UTF-8, 1 code unit in UTF-16)
    type Ah = GetFirst<"あいう">;  // "あ"
    type IU = GetRest<"あいう">;  // "いう"
    type AIU_Split = Split<"あいう">;  // ["あ", "いう"]
    
    // Mixed single-byte and multi-byte
    type M1 = GetFirst<"aあ">;  // "a"
    type M2 = GetFirst<"あa">;  // "あ"
    
    // 2-byte UTF-8 characters (Latin Extended, 1 code unit in UTF-16)
    type E = GetFirst<"éàü">;  // "é"
    
    // Emoji (4 bytes in UTF-8, 2 code units in UTF-16 as surrogate pair)
    type Emoji = GetFirst<"😀abc">;
    
    // Verification
    type Expect<T, Expected> = T extends Expected ? true : false;
    local check1: Expect<A, "A"> = true;
    local check2: Expect<Ah, "あ"> = true;
    local check3: Expect<BC, "BC"> = true;
    local check4: Expect<IU, "いう"> = true;
    local check5: Expect<M1, "a"> = true;
    local check6: Expect<M2, "あ"> = true;
    local check7: Expect<E, "é"> = true;
    